--- a/stylesheet.css
+++ b/stylesheet.css
@@ -114,8 +114,7 @@ svg { display: block;
 	margin-left: auto;
 	margin-right: auto;
 	padding-bottom: 20px;
-	box-shadow: inset 0 0 7px #a5dcc7;
-}
+}	/* box-shadow: inset 0 0 7px #a5dcc7; */
 .svgbackground { 
 	background-image: url(svg/hands.svg);
 	background-repeat: space;
