--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,19 +25,25 @@ body {
 button {
 	background-color: orange;
 	padding: 2px;
-	margin: 2px;
+	margin: 25px 2px 2px 25px;
 }
-	/* float: right; */
+dt {
+    font-weight: bold;
+}
 footer { 
 	background-color: #578192;
 	color: white;
 	text-align: center;
 	font-size: 1.8vh;
 	padding: 15px;
+    border-bottom-left-radius: 75px;
+    border-bottom-right-radius: 75px;
 }
-footer a:link { color: white;
+footer a:link {
+    color: white;
 }
-footer a:visited { color: #c9c7b8;
+footer a:visited {
+    color: #c9c7b8;
 }
 h1, h2 { 
 	text-align: center;
@@ -57,10 +63,14 @@ header {
 	background-color: #578192;
 	min-height: 10vh;
 	padding: 1px;
+    border-top-left-radius: 75px;
+    border-top-right-radius: 75px;
 }
-header a { text-decoration: none;
+header a {
+    text-decoration: none;
 }
-iframe { margin: 10px;
+iframe {
+    margin: 10px;
 }
 img { 
 	float: right;
@@ -95,7 +105,8 @@ nav ul {
 	text-align: center;
 	padding-left: 0;
 }
-svg { display: block;
+svg {
+    display: block;
 	width: auto;
 	margin-left: auto;
 	margin-right: auto;
@@ -103,7 +114,8 @@ svg { display: block;
 	border-color: transparent;
 	border-radius: 15%;
 }
-.show { display: none;
+.show {
+    display: none;
 }
 .skiplink { 
 	color: white;
@@ -111,8 +123,10 @@ svg { display: block;
 	text-decoration: none;
 	float: right;
 	padding: 1px;
+	margin: 25px 25px 2px 2px;
 }
-.smalltext { font-size: large;
+.smalltext {
+    font-size: large;
 }
 .statsgraphic { 
 	max-width: 60%;
@@ -140,7 +154,8 @@ svg { display: block;
 	flex-direction: row;
 	flex-wrap: wrap;
 }
-.flex-item-footer1 { flex: 2;
+.flex-item-footer1 {
+    flex: 2;
 }
 .flex-item-footer2 { 
 	flex: 8;
@@ -175,48 +190,61 @@ svg { display: block;
 	flex-direction: row;
 	flex-wrap: wrap;
 }
-.flex-item-identify1 { flex: 5;
+.flex-item-identify1 {
+    flex: 5;
 }
-.flex-item-identify2 { flex: 5;
+.flex-item-identify2 {
+    flex: 5;
 }
 #section1 { 
 	background-color: #a5dcc7;
 	padding: 1px;
 }
-#section1 a:link { color: #3a463d;
+#section1 a:link {
+    color: #3a463d;
 }
-#section1 a:visited { color: #73748f;
+#section1 a:visited {
+    color: #73748f;
 }
 #section2 { 
 	background-color: #c9c7b8;
 	padding: 1px;
 }
-#section2 a:link { color: #3a463d;
+#section2 a:link {
+    color: #3a463d;
 }
-#section2 a:visited { color: #73748f;
+#section2 a:visited {
+    color: #73748f;
 }
-#section2 div div a:link { color: white;
+#section2 div div a:link {
+    color: white;
 }
-#section2 div div a:visited { color: #c9c7b8;
+#section2 div div a:visited {
+    color: #c9c7b8;
 }
 #section3 { 
 	background-color: #73748f;
 	padding: 15px;
 	color: white;
 }
-#section3 ul { list-style-type: none;
+#section3 ul {
+    list-style-type: none;
 }
-#section3 a:link { color: white;
+#section3 a:link {
+    color: white;
 }
-#section3 a:visited { color: #c9c7b8;
+#section3 a:visited {
+    color: #c9c7b8;
 }
 #sitemap { 
 	border-right: 1px solid white;
 	padding-right: 15px;
 }
-#sitemap a:link { color: white;
+#sitemap a:link {
+    color: white;
 }
-#sitemap a:visited { color: #c9c7b8;
+#sitemap a:visited {
+    color: #c9c7b8;
 }
 #sitemap ul { 
 	list-style-type: none;
@@ -227,6 +255,8 @@ svg { display: block;
 	width: 75%;
 	margin-left: auto;
 	margin-right: auto;
+    border-radius: 75px;
+    box-shadow: 0 0 50px 10px #3a463d;
 }
 
 
