--- a/stylesheet.css
+++ b/stylesheet.css
@@ -116,7 +116,8 @@ svg {
 }
 
 #fbivideo {
-    max-width: 99%;
+    display: block;
+/*    max-width: 99%;*/
     margin-left: auto;
     margin-right: auto;
 }
