--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,7 +79,7 @@ img {
 	padding-left: 15px;
 	padding-right: 15px;
 }
-main p { 
+main p, dl { 
 	padding-left: 30px;
 	padding-right: 30px;
 }
@@ -260,8 +260,9 @@ svg {
 }
 #wrapper { 
 	width: 75%;
-	margin-left: auto;
-	margin-right: auto;
+    margin: 4% auto 4% auto;
+/*	margin-left: auto;*/
+/*	margin-right: auto;*/
     border-radius: 75px;
     box-shadow: 0 0 50px 10px #3a463d;
 }
